--- a/panel/src/index.html
+++ b/panel/src/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SB Admin Angular5 BS4</title>
+        <title>Asterisk-Angular</title>
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
